# seahorse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  Makefile.example  README.md  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
docs/: FAQ.md  architecture_v2.md  session-vector-memory-design.md  sqlite-memory-design.md
personas/: default.md  entp.md  infj.md
scripts/: preview_tool.py
src/seahorse/: __init__.py  bootstrap.py  constants.py  http_main.py  logger.py  mcp_main.py
src/seahorse/api/: __init__.py  constants.py  http_errors.py  http_logging.py  http_routes.py  http_server.py  mcp_logging.py  mcp_server.py  mcp_tools.py
src/seahorse/application/: __init__.py  health_service.py  ingest_service.py  memory_search_service.py  recall_service.py  session_ingest_service.py  user_model_merger.py  user_model_renderer.py  user_profile_ingest_service.py  user_profile_merger.py  user_profile_renderer.py  user_profile_service.py
src/seahorse/domain/: __init__.py  models.py  repositories.py  services.py
src/seahorse/infrastructure/: __init__.py  config.py  exceptions.py
src/seahorse/ingest/: __init__.py  block_content.py  child_chunks.py  chunk_policy.py  constants.py  conversation_blocks.py  embedding_text.py  ids.py  models.py  payloads.py  vector_fields.py
src/seahorse/prompts/: user_model_extraction.md
src/seahorse/retrieval/: conversation_recall.py  result_rendering.py  vector_health_service.py  vector_search_service.py
src/seahorse/tools/: __init__.py  contracts.py  get_persona.py  ingest_turn.py  (+5 more)
tests/: test_bootstrap.py  test_embeddings.py  test_extractors.py  test_health.py  test_http_api.py  test_ingest.py  test_mcp_server.py  test_qdrant_store.py  test_repositories.py  test_retrieval.py  test_services.py  test_tools.py  test_vector_pipeline.py
(+23 files in other folders)
