[project]
name = "seahorse"
version = "0.1.0"
description = "Single-user memory service for agent context recall and profile extraction"
readme = "README.md"
authors = [
    { name = "David", email = "david@surfin.sg" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
seahorse = "seahorse:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
