[project]
name = "seahorse"
version = "0.1.0"
description = "Single-user memory service for agent context recall and profile extraction"
readme = "README.md"
authors = [
    { name = "David", email = "david@surfin.sg" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
]

[project.scripts]
seahorse = "seahorse:main"
seahorse-http = "seahorse.http_main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
