[project]
name = "seahorse"
version = "0.1.0"
description = "Single-user memory service for agent systems that supports context recall, profile extraction, and memory search."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.0",
]

[project.scripts]
seahorse-mcp = "seahorse.mcp_main:main"
seahorse-http = "seahorse.http_main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
